# chip-8

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/chip-8/: cpu.rs  display.rs  emulator.rs  lib.rs  memory.rs  timer.rs
