[package]
name = "chip-8"
version = "0.1.0"
authors = ["Hugo Tunius <h@tunius.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chip_8"
path = "src/chip-8/lib.rs"

[[bin]]
name = "chip-8"
path = "src/bin/main.rs"
doc = false

[dependencies]
rand = "0.7.2"
minifb = "0.13"
clap = "2"
